role and victim swager payload update
